--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -29,9 +29,9 @@ ul,li {
 .main-header {
 
     .header-main-div {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        //display: flex;
+        //justify-content: space-between;
+        //align-items: center;
         .header-menu {
             .dropdown {
                 .btn {
